spectec/test/elab/neg/parse-stray-rbrace.t
  $ ./main.exe parse-stray-rbrace.spectec 2>&1
  error[parse/unexpected-token]: syntax error: unexpected token
    --> parse-stray-rbrace.spectec:3:1
    |
  3 | }
    | ^
  [1]
